--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     # 数据采集
     "feedparser>=6.0.10",
     "requests>=2.31.0",
+    "beautifulsoup4>=4.12.0",
 
     # LLM
     "zhipuai>=2.0.0",
