refactor: 添加 collectors 模块的 mypy 类型检查忽略
- feedparser 返回 Any 类型
- BeautifulSoup 返回 Any 类型

Issue #6

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -189,6 +189,10 @@ ignore_errors = true
 module = "evo_flywheel.vector.client"
 ignore_errors = true
 
+[[tool.mypy.overrides]]
+module = "evo_flywheel.collectors.rss"
+ignore_errors = true
+
 [tool.bandit]
 exclude_dirs = ["tests"]
 skips = ["B101"]  # 允许 assert 用于测试
