--- a/pyproject.toml
+++ b/pyproject.toml
@@ -193,6 +193,10 @@ ignore_errors = true
 module = "evo_flywheel.collectors.rss"
 ignore_errors = true
 
+[[tool.mypy.overrides]]
+module = "evo_flywheel.collectors.biorxiv"
+ignore_errors = true
+
 [tool.bandit]
 exclude_dirs = ["tests"]
 skips = ["B101"]  # 允许 assert 用于测试
