feat: 实现 evo-analyze 模块 (TDD GREEN)
新增文件: src/evo_flywheel/scheduler/analysis.py

实现功能:
- _get_unanalyzed_papers(): 获取未分析的论文 (importance_score IS NULL)
- _update_analysis_to_db(): 保存 AI 分析结果到数据库
- analyze_unanalyzed_papers(): 批量分析论文
- _get_unembedded_papers(): 获取未向量化的论文 (embedded = 0)
- _save_embeddings_to_chroma(): 保存向量到 Chroma
- embed_unembedded_papers(): 批量向量化
- main(): CLI 入口 (支持 --max, --embed-only)

测试覆盖: 15/15 通过
- TestGetUnanalyzedPapers: 3 tests
- TestUpdateAnalysisToDb: 2 tests
- TestAnalyzeUnanalyzedPapers: 2 tests
- TestGetUnembeddedPapers: 1 test
- TestSaveEmbeddingsToChroma: 2 tests
- TestEmbedUnembeddedPapers: 1 test
- TestMainAnalysis: 4 tests

pyproject.toml 更新:
- 新增 evo-analyze 入口点

使用方式:
  evo-analyze               # 分析未分析的论文
  evo-analyze --max 50      # 最多分析 50 篇
  evo-analyze --embed-only  # 只生成向量

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ Issues = "https://github.com/gqy20/evo-flywheel/issues"
 
 [project.scripts]
 evo-fetch = "evo_flywheel.scheduler.jobs:main"
+evo-analyze = "evo_flywheel.scheduler.analysis:main"
 evo-init = "evo_flywheel.db.init:main"
 
 # Build system
