feat: 添加 embedding 模型的 base url 和 token 配置
配置更新:
- config.py: 添加 embedding_model 配置项
- embedding_api_url 默认值改为 https://api.openai.com/v1
- 添加注释说明 base_url 不应包含 /embeddings 路径

.env.example 更新:
- 添加完整的 LLM API 配置示例 (OPENAI_API_KEY, OPENAI_BASE_URL)
- 添加完整的 Embedding API 配置示例 (EMBEDDING_API_URL, EMBEDDING_API_KEY, EMBEDDING_MODEL)
- 移除旧的 ZHIPU_API_KEY (统一使用 OPENAI_* 命名)

embeddings.py 更新:
- 添加 get_embedding_model() 函数从配置获取模型名称
- generate_embedding() 的 model 参数改为可选，默认使用配置值
- generate_embeddings_batch() 的 model 参数改为可选，默认使用配置值
- 改进配置获取方式，直接使用 settings.embedding_api_url

使用方式:
  # .env 文件配置
  EMBEDDING_API_URL=https://api.openai.com/v1
  EMBEDDING_API_KEY=sk-xxx
  EMBEDDING_MODEL=text-embedding-3-small

--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,14 @@ DATABASE_URL=sqlite:///evo_flywheel.db
 # Chroma 向量数据库配置
 CHROMA_PERSIST_DIR=./chroma_db
 
-# 智谱 AI API 密钥 (必填)
-# 获取地址: https://open.bigmodel.cn/usercenter/apikeys
-ZHIPU_API_KEY=your-zhipu-api-key-here
+# LLM API 配置 (用于论文分析)
+OPENAI_API_KEY=your-api-key-here
+OPENAI_BASE_URL=https://open.bigmodel.cn/api/paas/v4/
+
+# Embedding API 配置 (用于向量化)
+EMBEDDING_API_URL=https://api.openai.com/v1
+EMBEDDING_API_KEY=your-embedding-api-key-here
+EMBEDDING_MODEL=text-embedding-3-small
 
 # 日志级别 (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 LOG_LEVEL=INFO
