feat: 添加 API_BASE_URL 环境变量配置
- Web 界面通过此配置连接 FastAPI 后端
- 默认值为 http://localhost:8000

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,9 @@ EMBEDDING_API_URL=https://api.openai.com/v1
 EMBEDDING_API_KEY=your-embedding-api-key-here
 EMBEDDING_MODEL=text-embedding-3-small
 
+# FastAPI 后端配置 (Web 界面连接)
+API_BASE_URL=http://localhost:8000
+
 # 日志级别 (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 LOG_LEVEL=INFO
 
